force-app/main/default/objects/EnvelopeAeronave__c/EnvelopeAeronave__c.object-meta.xml
<CustomObject>
    <label>Envelope da Aeronave</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Nome de EnvelopeAeronave</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envelope da Aeronave</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>