force-app/main/default/objects/EnvelopeAeronave__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Aeronave</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipLabel>Envelope da Aeronave</relationshipLabel>
    <relationshipName>EnvelopeAeronave</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>