force-app/main/default/objects/EnvelopeAeronave__c/fields/balanceamento__c.field-meta.xml
<CustomField>
    <fullName>balanceamento__c</fullName>
    <label>Braço</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>