force-app/main/default/objects/EnvelopeAeronave__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <label>Peso</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>